# transfigure

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  input.css  package-lock.json  package.json  plan.md  tailwind.config.js
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy.yml
crates/app/: Cargo.toml  _headers  index.html  robots.txt  sitemap.xml
crates/app/src/: main.rs  types.rs  utils.rs
crates/app/src/components/: converter.rs  header.rs  hero.rs  info.rs  mod.rs
crates/converter/: Cargo.toml
crates/converter/src/: archive.rs  audio.rs  document.rs  image_conv.rs  lib.rs  spreadsheet.rs
crates/og-gen/: Cargo.toml
crates/og-gen/src/: main.rs
