[package]
name = "transfigure-app"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
converter = { path = "../converter" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "DragEvent",
    "DataTransfer",
    "File",
    "FileList",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlInputElement",
    "HtmlAnchorElement",
    "HtmlSelectElement",
    "console",
]
