[package]
name = "converter"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp", "tiff", "avif", "qoi", "tga", "hdr", "dds", "exr"] }
ico = "0.5"
rtf-parser = "0.4"
comrak = { version = "0.36", default-features = false }
csv = "1"
base64 = "0.22"
resvg = { version = "0.44", default-features = false }
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
lzma-rs = { version = "0.3", features = ["raw_decoder"] }
sevenz-rust2 = { version = "0.20", default-features = false, features = ["compress"] }
symphonia = { version = "0.5", default-features = false, features = ["mp3", "flac", "vorbis", "ogg", "wav", "pcm"] }
hound = "3"
lopdf = "0.39"
